# lightweight-human-pose-estimation.pytorch

./: .gitignore  CMakeLists.txt  README.md  demo.py  install.sh  package.xml  requirements.txt  setup.py  train.py
datasets/: coco.py  transformations.py
human_pose_estimator/: __init__.py  __main__.py  image_reader.py  pose_estimator.py  train.py  val.py  video_reader.py
human_pose_estimator/models/: with_mobilenet.py
human_pose_estimator/modules/: keypoints.py  pose.py
launch/: camera.launch  demo.launch  demo_3d.launch  human_pose_estimation.launch  human_pose_estimation_3d.launch
models/: with_mobilenet.py  with_mobilenetV3_sh.py
modules/: keypoints.py  pose.py
msg/: KeyPoint.msg  KeyPoint_3d.msg  KeyPoints.msg  KeyPoints_3d.msg  PoseFlame.msg
script/: demo.py  human_pose_estimation.py  val.py
script/datasets/: transformations.py
script/modules/: keypoints.py  pose.py
scripts/: convert_to_onnx.py
src/: human_pose_tf_broadcaster.cpp
